fix tiny gap in navigation sidebar
Closes-Bug: #1378452

--- a/openstack_dashboard/static/dashboard/scss/horizon.scss
+++ b/openstack_dashboard/static/dashboard/scss/horizon.scss
@@ -232,7 +232,7 @@ h2 {
 }
 
 .sidebar {
-  border-width: 0 5px 5px 0;
+  border-width: 0 6px 5px 0;
   border-color: $border-color;
   border-style: solid;
   border-radius: 0 0 5px 0;
